Chapter 10 — Listing 10.2: UnsafeCounter.java Demonstrates: shared mutable state without synchronization, producing a race condition