@@ -1,4 +1,5 @@
-// Java 8+
+// Java 25+
+// Feature shown: unsynchronized shared counter (race condition), final in Java 8+
 package chapter10;
 
 import java.util.concurrent.ExecutorService;
@@ -8,27 +9,29 @@ import java.util.logging.Logger;
 
 /**
  * Listing 10.2 — UnsafeCounter.java
- * Demonstrates: Shared mutable state without coordination leads to lost updates
+ * Demonstrates: shared mutable state without synchronization, producing a race condition
  * Chapter 10: Concurrency Foundations and Coordination
- * Requires: Java 8+
+ * Requires: Java 25+ (compiled with --enable-preview --release 21 for
+ * the void main() instance main method)
  */
 public class UnsafeCounter {
 
     private static final Logger log =
             Logger.getLogger(UnsafeCounter.class.getName());
 
-    // Shared mutable state — no synchronization, no atomics
+    // Shared mutable state — no coordination between threads
     static int count = 0;
 
-    public static void main(String[] args) throws InterruptedException {
+    void main() throws InterruptedException {
 
-        ExecutorService executor = Executors.newFixedThreadPool(10);
+        ExecutorService executor =
+                Executors.newFixedThreadPool(10); // 10 threads competing for count
 
-        // Submit 1000 tasks, each incrementing count once
+        // 1000 tasks each incrementing count once
         // Expected result: 1000
-        // Actual result:   unpredictable — typically less than 1000
+        // Actual result:   unpredictable due to lost updates
         for (int i = 0; i < 1000; i++) {
-            executor.submit(() -> count++); // count++ is NOT atomic
+            executor.submit(() -> count++); // read-increment-write is not atomic
         }
 
         executor.shutdown();
